ass5_14CS10062/y.output
Terminals unused in grammar

   STRUCT_KEYWORD
   TYPEDEF_KEYWORD
   UNION_KEYWORD
   ENUMERATION_CONSTANT
   HASH
   SINGLE_LINE_COMMENT
   NEW_LINE
   IF_FIRST


State 354 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 statement: labeled_statement
    2          | compound_statement
    3          | expression_statement
    4          | selection_statement
    5          | iteration_statement
    6          | jump_statement

    7 labeled_statement: IDENTIFIER COLON statement
    8                  | CASE_KEYWORD constant_expression COLON statement
    9                  | DEFAULT_KEYWORD COLON statement

   10 compound_statement: LEFT_CURLY_BRACE RIGHT_CURLY_BRACE
   11                   | LEFT_CURLY_BRACE block_item_list RIGHT_CURLY_BRACE

   12 block_item_list: block_item
   13                | block_item_list M block_item

   14 block_item: declaration
   15           | statement

   16 expression_statement: SEMICOLON_TERMINATOR
   17                     | expression SEMICOLON_TERMINATOR

   18 selection_statement: IF_KEYWORD LEFT_ROUND_BRACE expression N RIGHT_ROUND_BRACE M statement N
   19                    | IF_KEYWORD LEFT_ROUND_BRACE expression N RIGHT_ROUND_BRACE M statement N ELSE_KEYWORD M statement
   20                    | SWITCH_KEYWORD LEFT_ROUND_BRACE expression RIGHT_ROUND_BRACE statement

   21 iteration_statement: WHILE_KEYWORD M LEFT_ROUND_BRACE expression N RIGHT_ROUND_BRACE M statement
   22                    | DO_KEYWORD M statement M WHILE_KEYWORD LEFT_ROUND_BRACE expression N RIGHT_ROUND_BRACE SEMICOLON_TERMINATOR
   23                    | FOR_KEYWORD LEFT_ROUND_BRACE expression_statement M expression_statement N M expression N RIGHT_ROUND_BRACE M statement
   24                    | FOR_KEYWORD LEFT_ROUND_BRACE declaration expression_statement expression_statement RIGHT_ROUND_BRACE statement

   25 jump_statement: GOTO_KEYWORD IDENTIFIER SEMICOLON_TERMINATOR
   26               | CONTINUE_KEYWORD SEMICOLON_TERMINATOR
   27               | BREAK_KEYWORD SEMICOLON_TERMINATOR
   28               | RETURN_KEYWORD SEMICOLON_TERMINATOR
   29               | RETURN_KEYWORD expression SEMICOLON_TERMINATOR

   30 translation_unit: external_declaration
   31                 | translation_unit external_declaration

   32 external_declaration: function_definition
   33                     | declaration

   34 function_definition: declaration_specifiers declarator declaration_list compound_statement
   35                    | declaration_specifiers declarator F compound_statement

   36 declaration_list: declaration
   37                 | declaration_list declaration

   38 expression: assignment_expression
   39           | expression COMMA assignment_expression

   40 constant_expression: conditional_expression

   41 assignment_expression: conditional_expression
   42                      | unary_expression assignment_operator assignment_expression

   43 assignment_operator: EQUAL
   44                    | MULTIPLICATION_EQUAL
   45                    | SLASH_EQUAL
   46                    | PERCENTAGE_EQUAL
   47                    | PLUS_EQUAL
   48                    | MINUS_EQUAL
   49                    | LEFT_SHIFT_EQUAL
   50                    | RIGHT_SHIFT_EQUAL
   51                    | BITWISE_AND_EQUAL
   52                    | BITWISE_NOT_EQUAL
   53                    | BITWISE_OR_EQUAL

   54 conditional_expression: logical_OR_expression
   55                       | logical_OR_expression N QUESTION_MARK M expression N COLON M conditional_expression

   56 logical_OR_expression: logical_AND_expression
   57                      | logical_OR_expression LOGICAL_OR M logical_AND_expression

   58 logical_AND_expression: inclusive_OR_expression
   59                       | logical_AND_expression LOGICAL_AND M inclusive_OR_expression

   60 inclusive_OR_expression: exclusive_OR_expression
   61                        | inclusive_OR_expression BITWISE_OR exclusive_OR_expression

   62 exclusive_OR_expression: AND_expression
   63                        | exclusive_OR_expression CARET AND_expression

   64 AND_expression: equality_expression
   65               | AND_expression AMPERSAND equality_expression

   66 equality_expression: relational_expression
   67                    | equality_expression EQUAL_EQUAL relational_expression
   68                    | equality_expression NOT_EQUAL relational_expression

   69 relational_expression: shift_expression
   70                      | relational_expression LESS_THAN shift_expression
   71                      | relational_expression GREATER_THAN shift_expression
   72                      | relational_expression LESS_THAN_EQUAL shift_expression
   73                      | relational_expression GREATER_THAN_EQUAL shift_expression

   74 shift_expression: additive_expression
   75                 | shift_expression LEFT_SHIFT additive_expression
   76                 | shift_expression RIGHT_SHIFT additive_expression

   77 additive_expression: multiplicative_expression
   78                    | additive_expression PLUS multiplicative_expression
   79                    | additive_expression MINUS multiplicative_expression

   80 multiplicative_expression: cast_expression
   81                          | multiplicative_expression MULTIPLICATION cast_expression
   82                          | multiplicative_expression FORWARD_SLASH cast_expression
   83                          | multiplicative_expression PERCENTAGE cast_expression

   84 cast_expression: unary_expression
   85                | LEFT_ROUND_BRACE type_name RIGHT_ROUND_BRACE cast_expression

   86 unary_operator: AMPERSAND
   87               | MULTIPLICATION
   88               | PLUS
   89               | MINUS
   90               | TILDE
   91               | EXCLIMATION

   92 unary_expression: postfix_expression
   93                 | PLUS_PLUS unary_expression
   94                 | MINUS_MINUS unary_expression
   95                 | unary_operator cast_expression
   96                 | SIZEOF_KEYWORD unary_expression
   97                 | SIZEOF_KEYWORD LEFT_ROUND_BRACE type_name RIGHT_ROUND_BRACE

   98 argument_expression_list: assignment_expression
   99                         | argument_expression_list COMMA assignment_expression

  100 postfix_expression: primary_expression
  101                   | postfix_expression LEFT_SQUARE_BRACE expression RIGHT_SQUARE_BRACE
  102                   | postfix_expression LEFT_ROUND_BRACE RIGHT_ROUND_BRACE
  103                   | postfix_expression LEFT_ROUND_BRACE argument_expression_list RIGHT_ROUND_BRACE
  104                   | postfix_expression PERIOD IDENTIFIER
  105                   | postfix_expression POINTS_TO IDENTIFIER
  106                   | postfix_expression PLUS_PLUS
  107                   | postfix_expression MINUS_MINUS
  108                   | LEFT_ROUND_BRACE type_name RIGHT_ROUND_BRACE LEFT_CURLY_BRACE initializer_list RIGHT_CURLY_BRACE
  109                   | LEFT_ROUND_BRACE type_name RIGHT_ROUND_BRACE LEFT_CURLY_BRACE initializer_list COMMA RIGHT_CURLY_BRACE

  110 primary_expression: IDENTIFIER
  111                   | constant
  112                   | STRING_LITERAL
  113                   | LEFT_ROUND_BRACE expression RIGHT_ROUND_BRACE

  114 constant: INTEGER_CONSTANT
  115         | FLOATING_CONSTANT
  116         | CHAR_CONSTANT

  117 enumeration_constant: IDENTIFIER

  118 M: %empty

  119 N: %empty

  120 declaration: declaration_specifiers SEMICOLON_TERMINATOR
  121            | declaration_specifiers init_declarator_list SEMICOLON_TERMINATOR

  122 declaration_specifiers: storage_class_specifier
  123                       | storage_class_specifier declaration_specifiers
  124                       | type_specifier
  125                       | type_specifier declaration_specifiers
  126                       | type_qualifier
  127                       | type_qualifier declaration_specifiers
  128                       | function_specifier
  129                       | function_specifier declaration_specifiers

  130 init_declarator_list: init_declarator
  131                     | init_declarator_list COMMA init_declarator

  132 init_declarator: declarator
  133                | declarator EQUAL initializer

  134 storage_class_specifier: EXTERN_KEYWORD
  135                        | STATIC_KEYWORD
  136                        | AUTO_KEYWORD
  137                        | REGISTER_KEYWORD

  138 type_specifier: VOID_KEYWORD
  139               | CHAR_KEYWORD
  140               | SHORT_KEYWORD
  141               | INT_KEYWORD
  142               | LONG_KEYWORD
  143               | FLOAT_KEYWORD
  144               | DOUBLE_KEYWORD
  145               | SIGNED_KEYWORD
  146               | UNSIGNED_KEYWORD
  147               | _BOOL_KEYWORD
  148               | _COMPLEX_KEYWORD
  149               | _IMAGINARY_KEYWORD
  150               | enum_specifier

  151 specifier_qualifier_list: type_specifier specifier_qualifier_list
  152                         | type_specifier
  153                         | type_qualifier specifier_qualifier_list
  154                         | type_qualifier

  155 enum_specifier: ENUM_KEYWORD identifier_opt LEFT_CURLY_BRACE enumerator_list RIGHT_CURLY_BRACE
  156               | ENUM_KEYWORD identifier_opt LEFT_CURLY_BRACE enumerator_list COMMA RIGHT_CURLY_BRACE
  157               | ENUM_KEYWORD IDENTIFIER

  158 identifier_opt: IDENTIFIER
  159               | %empty

  160 enumerator_list: enumerator
  161                | enumerator_list COMMA enumerator

  162 enumerator: enumeration_constant
  163           | enumeration_constant EQUAL constant_expression

  164 type_qualifier: CONST_KEYWORD
  165               | RESTRICT_KEYWORD
  166               | VOLATILE_KEYWORD

  167 function_specifier: INLINE_KEYWORD

  168 declarator: pointer direct_declarator
  169           | direct_declarator

  170 direct_declarator: IDENTIFIER
  171                  | LEFT_ROUND_BRACE declarator RIGHT_ROUND_BRACE
  172                  | direct_declarator LEFT_SQUARE_BRACE type_qualifier_list assignment_expression RIGHT_SQUARE_BRACE
  173                  | direct_declarator LEFT_SQUARE_BRACE assignment_expression RIGHT_SQUARE_BRACE
  174                  | direct_declarator LEFT_SQUARE_BRACE type_qualifier_list RIGHT_SQUARE_BRACE
  175                  | direct_declarator LEFT_SQUARE_BRACE RIGHT_SQUARE_BRACE
  176                  | direct_declarator LEFT_SQUARE_BRACE STATIC_KEYWORD type_qualifier_list assignment_expression RIGHT_SQUARE_BRACE
  177                  | direct_declarator LEFT_SQUARE_BRACE STATIC_KEYWORD assignment_expression RIGHT_SQUARE_BRACE
  178                  | direct_declarator LEFT_SQUARE_BRACE type_qualifier_list STATIC_KEYWORD assignment_expression RIGHT_SQUARE_BRACE
  179                  | direct_declarator LEFT_SQUARE_BRACE type_qualifier_list MULTIPLICATION RIGHT_SQUARE_BRACE
  180                  | direct_declarator LEFT_SQUARE_BRACE MULTIPLICATION RIGHT_SQUARE_BRACE
  181                  | direct_declarator LEFT_ROUND_BRACE parameter_type_list RIGHT_ROUND_BRACE
  182                  | direct_declarator LEFT_ROUND_BRACE identifier_list RIGHT_ROUND_BRACE
  183                  | direct_declarator LEFT_ROUND_BRACE RIGHT_ROUND_BRACE

  184 pointer: MULTIPLICATION
  185        | MULTIPLICATION type_qualifier_list
  186        | MULTIPLICATION pointer
  187        | MULTIPLICATION type_qualifier_list pointer

  188 type_qualifier_list: type_qualifier
  189                    | type_qualifier_list type_qualifier

  190 parameter_type_list: parameter_list
  191                    | parameter_list COMMA ELIPSES

  192 parameter_list: parameter_declaration
  193               | parameter_list COMMA parameter_declaration

  194 parameter_declaration: declaration_specifiers declarator
  195                      | declaration_specifiers

  196 identifier_list: IDENTIFIER
  197                | identifier_list COMMA IDENTIFIER

  198 type_name: specifier_qualifier_list

  199 initializer: assignment_expression
  200            | LEFT_CURLY_BRACE initializer_list RIGHT_CURLY_BRACE
  201            | LEFT_CURLY_BRACE initializer_list COMMA RIGHT_CURLY_BRACE

  202 initializer_list: designation_opt initializer
  203                 | initializer_list COMMA designation_opt initializer

  204 designation_opt: designation
  205                | %empty

  206 designation: designator_list EQUAL

  207 designator_list: designator
  208                | designator_list designator

  209 designator: LEFT_SQUARE_BRACE constant_expression RIGHT_SQUARE_BRACE
  210           | PERIOD IDENTIFIER

  211 F: %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
AUTO_KEYWORD (258) 136
BREAK_KEYWORD (259) 27
CASE_KEYWORD (260) 8
CHAR_KEYWORD (261) 139
CONST_KEYWORD (262) 164
CONTINUE_KEYWORD (263) 26
DEFAULT_KEYWORD (264) 9
DO_KEYWORD (265) 22
DOUBLE_KEYWORD (266) 144
ELSE_KEYWORD (267) 19
ENUM_KEYWORD (268) 155 156 157
EXTERN_KEYWORD (269) 134
FLOAT_KEYWORD (270) 143
FOR_KEYWORD (271) 23 24
GOTO_KEYWORD (272) 25
IF_KEYWORD (273) 18 19
INLINE_KEYWORD (274) 167
INT_KEYWORD (275) 141
LONG_KEYWORD (276) 142
REGISTER_KEYWORD (277) 137
RESTRICT_KEYWORD (278) 165
RETURN_KEYWORD (279) 28 29
SHORT_KEYWORD (280) 140
SIGNED_KEYWORD (281) 145
SIZEOF_KEYWORD (282) 96 97
STATIC_KEYWORD (283) 135 176 177 178
STRUCT_KEYWORD (284)
SWITCH_KEYWORD (285) 20
TYPEDEF_KEYWORD (286)
UNION_KEYWORD (287)
UNSIGNED_KEYWORD (288) 146
VOID_KEYWORD (289) 138
VOLATILE_KEYWORD (290) 166
WHILE_KEYWORD (291) 21 22
_BOOL_KEYWORD (292) 147
_COMPLEX_KEYWORD (293) 148
_IMAGINARY_KEYWORD (294) 149
IDENTIFIER (295) 7 25 104 105 110 117 157 158 170 196 197 210
ENUMERATION_CONSTANT (296)
INTEGER_CONSTANT (297) 114
FLOATING_CONSTANT (298) 115
CHAR_CONSTANT (299) 116
STRING_LITERAL (300) 112
LEFT_SQUARE_BRACE (301) 101 172 173 174 175 176 177 178 179 180 209
RIGHT_SQUARE_BRACE (302) 101 172 173 174 175 176 177 178 179 180 209
LEFT_ROUND_BRACE (303) 18 19 20 21 22 23 24 85 97 102 103 108 109 113
    171 181 182 183
RIGHT_ROUND_BRACE (304) 18 19 20 21 22 23 24 85 97 102 103 108 109
    113 171 181 182 183
LEFT_CURLY_BRACE (305) 10 11 108 109 155 156 200 201
RIGHT_CURLY_BRACE (306) 10 11 108 109 155 156 200 201
PERIOD (307) 104 210
POINTS_TO (308) 105
PLUS_PLUS (309) 93 106
MINUS_MINUS (310) 94 107
AMPERSAND (311) 65 86
MULTIPLICATION (312) 81 87 179 180 184 185 186 187
PLUS (313) 78 88
MINUS (314) 79 89
TILDE (315) 90
EXCLIMATION (316) 91
FORWARD_SLASH (317) 82
PERCENTAGE (318) 83
LEFT_SHIFT (319) 75
RIGHT_SHIFT (320) 76
LESS_THAN (321) 70
GREATER_THAN (322) 71
LESS_THAN_EQUAL (323) 72
GREATER_THAN_EQUAL (324) 73
EQUAL_EQUAL (325) 67
NOT_EQUAL (326) 68
CARET (327) 63
BITWISE_OR (328) 61
LOGICAL_AND (329) 59
LOGICAL_OR (330) 57
QUESTION_MARK (331) 55
COLON (332) 7 8 9 55
SEMICOLON_TERMINATOR (333) 16 17 22 25 26 27 28 29 120 121
ELIPSES (334) 191
EQUAL (335) 43 133 163 206
MULTIPLICATION_EQUAL (336) 44
SLASH_EQUAL (337) 45
PERCENTAGE_EQUAL (338) 46
PLUS_EQUAL (339) 47
MINUS_EQUAL (340) 48
LEFT_SHIFT_EQUAL (341) 49
RIGHT_SHIFT_EQUAL (342) 50
BITWISE_AND_EQUAL (343) 51
BITWISE_NOT_EQUAL (344) 52
BITWISE_OR_EQUAL (345) 53
COMMA (346) 39 99 109 131 156 161 191 193 197 201 203
HASH (347)
SINGLE_LINE_COMMENT (348)
NEW_LINE (349)
IF_FIRST (350)


Nonterminals, with rules where they appear

$accept (96)
    on left: 0
statement (97)
    on left: 1 2 3 4 5 6, on right: 7 8 9 15 18 19 20 21 22 23 24
labeled_statement (98)
    on left: 7 8 9, on right: 1
compound_statement (99)
    on left: 10 11, on right: 2 34 35
block_item_list (100)
    on left: 12 13, on right: 11 13
block_item (101)
    on left: 14 15, on right: 12 13
expression_statement (102)
    on left: 16 17, on right: 3 23 24
selection_statement (103)
    on left: 18 19 20, on right: 4
iteration_statement (104)
    on left: 21 22 23 24, on right: 5
jump_statement (105)
    on left: 25 26 27 28 29, on right: 6
translation_unit (106)
    on left: 30 31, on right: 0 31
external_declaration (107)
    on left: 32 33, on right: 30 31
function_definition (108)
    on left: 34 35, on right: 32
declaration_list (109)
    on left: 36 37, on right: 34 37
expression (110)
    on left: 38 39, on right: 17 18 19 20 21 22 23 29 39 55 101 113
constant_expression (111)
    on left: 40, on right: 8 163 209
assignment_expression (112)
    on left: 41 42, on right: 38 39 42 98 99 172 173 176 177 178 199
assignment_operator (113)
    on left: 43 44 45 46 47 48 49 50 51 52 53, on right: 42
conditional_expression (114)
    on left: 54 55, on right: 40 41 55
logical_OR_expression (115)
    on left: 56 57, on right: 54 55 57
logical_AND_expression (116)
    on left: 58 59, on right: 56 57 59
inclusive_OR_expression (117)
    on left: 60 61, on right: 58 59 61
exclusive_OR_expression (118)
    on left: 62 63, on right: 60 61 63
AND_expression (119)
    on left: 64 65, on right: 62 63 65
equality_expression (120)
    on left: 66 67 68, on right: 64 65 67 68
relational_expression (121)
    on left: 69 70 71 72 73, on right: 66 67 68 70 71 72 73
shift_expression (122)
    on left: 74 75 76, on right: 69 70 71 72 73 75 76
additive_expression (123)
    on left: 77 78 79, on right: 74 75 76 78 79
multiplicative_expression (124)
    on left: 80 81 82 83, on right: 77 78 79 81 82 83
cast_expression (125)
    on left: 84 85, on right: 80 81 82 83 85 95
unary_operator (126)
    on left: 86 87 88 89 90 91, on right: 95
unary_expression (127)
    on left: 92 93 94 95 96 97, on right: 42 84 93 94 96
argument_expression_list (128)
    on left: 98 99, on right: 99 103
postfix_expression (129)
    on left: 100 101 102 103 104 105 106 107 108 109, on right: 92
    101 102 103 104 105 106 107
primary_expression (130)
    on left: 110 111 112 113, on right: 100
constant (131)
    on left: 114 115 116, on right: 111
enumeration_constant (132)
    on left: 117, on right: 162 163
M (133)
    on left: 118, on right: 13 18 19 21 22 23 55 57 59
N (134)
    on left: 119, on right: 18 19 21 22 23 55
declaration (135)
    on left: 120 121, on right: 14 24 33 36 37
declaration_specifiers (136)
    on left: 122 123 124 125 126 127 128 129, on right: 34 35 120 121
    123 125 127 129 194 195
init_declarator_list (137)
    on left: 130 131, on right: 121 131
init_declarator (138)
    on left: 132 133, on right: 130 131
storage_class_specifier (139)
    on left: 134 135 136 137, on right: 122 123
type_specifier (140)
    on left: 138 139 140 141 142 143 144 145 146 147 148 149 150, on right:
    124 125 151 152
specifier_qualifier_list (141)
    on left: 151 152 153 154, on right: 151 153 198
enum_specifier (142)
    on left: 155 156 157, on right: 150
identifier_opt (143)
    on left: 158 159, on right: 155 156
enumerator_list (144)
    on left: 160 161, on right: 155 156 161
enumerator (145)
    on left: 162 163, on right: 160 161
type_qualifier (146)
    on left: 164 165 166, on right: 126 127 153 154 188 189
function_specifier (147)
    on left: 167, on right: 128 129
declarator (148)
    on left: 168 169, on right: 34 35 132 133 171 194
direct_declarator (149)
    on left: 170 171 172 173 174 175 176 177 178 179 180 181 182 183,
    on right: 168 169 172 173 174 175 176 177 178 179 180 181 182 183
pointer (150)
    on left: 184 185 186 187, on right: 168 186 187
type_qualifier_list (151)
    on left: 188 189, on right: 172 174 176 178 179 185 187 189
parameter_type_list (152)
    on left: 190 191, on right: 181
parameter_list (153)
    on left: 192 193, on right: 190 191 193
parameter_declaration (154)
    on left: 194 195, on right: 192 193
identifier_list (155)
    on left: 196 197, on right: 182 197
type_name (156)
    on left: 198, on right: 85 97 108 109
initializer (157)
    on left: 199 200 201, on right: 133 202 203
initializer_list (158)
    on left: 202 203, on right: 108 109 200 201 203
designation_opt (159)
    on left: 204 205, on right: 202 203
designation (160)
    on left: 206, on right: 204
designator_list (161)
    on left: 207 208, on right: 206 208
designator (162)
    on left: 209 210, on right: 207 208
F (163)
    on left: 211, on right: 35


State 0

    0 $accept: . translation_unit $end

    AUTO_KEYWORD        shift, and go to state 1
    CHAR_KEYWORD        shift, and go to state 2
    CONST_KEYWORD       shift, and go to state 3
    DOUBLE_KEYWORD      shift, and go to state 4
    ENUM_KEYWORD        shift, and go to state 5
    EXTERN_KEYWORD      shift, and go to state 6
    FLOAT_KEYWORD       shift, and go to state 7
    INLINE_KEYWORD      shift, and go to state 8
    INT_KEYWORD         shift, and go to state 9
    LONG_KEYWORD        shift, and go to state 10
    REGISTER_KEYWORD    shift, and go to state 11
    RESTRICT_KEYWORD    shift, and go to state 12
    SHORT_KEYWORD       shift, and go to state 13
    SIGNED_KEYWORD      shift, and go to state 14
    STATIC_KEYWORD      shift, and go to state 15
    UNSIGNED_KEYWORD    shift, and go to state 16
    VOID_KEYWORD        shift, and go to state 17
    VOLATILE_KEYWORD    shift, and go to state 18
    _BOOL_KEYWORD       shift, and go to state 19
    _COMPLEX_KEYWORD    shift, and go to state 20
    _IMAGINARY_KEYWORD  shift, and go to state 21

    translation_unit         go to state 22
    external_declaration     go to state 23
    function_definition      go to state 24
    declaration              go to state 25
    declaration_specifiers   go to state 26
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 1

  136 storage_class_specifier: AUTO_KEYWORD .

    $default  reduce using rule 136 (storage_class_specifier)


State 2

  139 type_specifier: CHAR_KEYWORD .

    $default  reduce using rule 139 (type_specifier)


State 3

  164 type_qualifier: CONST_KEYWORD .

    $default  reduce using rule 164 (type_qualifier)


State 4

  144 type_specifier: DOUBLE_KEYWORD .

    $default  reduce using rule 144 (type_specifier)


State 5

  155 enum_specifier: ENUM_KEYWORD . identifier_opt LEFT_CURLY_BRACE enumerator_list RIGHT_CURLY_BRACE
  156               | ENUM_KEYWORD . identifier_opt LEFT_CURLY_BRACE enumerator_list COMMA RIGHT_CURLY_BRACE
  157               | ENUM_KEYWORD . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 159 (identifier_opt)

    identifier_opt  go to state 33


State 6

  134 storage_class_specifier: EXTERN_KEYWORD .

    $default  reduce using rule 134 (storage_class_specifier)


State 7

  143 type_specifier: FLOAT_KEYWORD .

    $default  reduce using rule 143 (type_specifier)


State 8

  167 function_specifier: INLINE_KEYWORD .

    $default  reduce using rule 167 (function_specifier)


State 9

  141 type_specifier: INT_KEYWORD .

    $default  reduce using rule 141 (type_specifier)


State 10

  142 type_specifier: LONG_KEYWORD .

    $default  reduce using rule 142 (type_specifier)


State 11

  137 storage_class_specifier: REGISTER_KEYWORD .

    $default  reduce using rule 137 (storage_class_specifier)


State 12

  165 type_qualifier: RESTRICT_KEYWORD .

    $default  reduce using rule 165 (type_qualifier)


State 13

  140 type_specifier: SHORT_KEYWORD .

    $default  reduce using rule 140 (type_specifier)


State 14

  145 type_specifier: SIGNED_KEYWORD .

    $default  reduce using rule 145 (type_specifier)


State 15

  135 storage_class_specifier: STATIC_KEYWORD .

    $default  reduce using rule 135 (storage_class_specifier)


State 16

  146 type_specifier: UNSIGNED_KEYWORD .

    $default  reduce using rule 146 (type_specifier)


State 17

  138 type_specifier: VOID_KEYWORD .

    $default  reduce using rule 138 (type_specifier)


State 18

  166 type_qualifier: VOLATILE_KEYWORD .

    $default  reduce using rule 166 (type_qualifier)


State 19

  147 type_specifier: _BOOL_KEYWORD .

    $default  reduce using rule 147 (type_specifier)


State 20

  148 type_specifier: _COMPLEX_KEYWORD .

    $default  reduce using rule 148 (type_specifier)


State 21

  149 type_specifier: _IMAGINARY_KEYWORD .

    $default  reduce using rule 149 (type_specifier)


State 22

    0 $accept: translation_unit . $end
   31 translation_unit: translation_unit . external_declaration

    $end                shift, and go to state 34
    AUTO_KEYWORD        shift, and go to state 1
    CHAR_KEYWORD        shift, and go to state 2
    CONST_KEYWORD       shift, and go to state 3
    DOUBLE_KEYWORD      shift, and go to state 4
    ENUM_KEYWORD        shift, and go to state 5
    EXTERN_KEYWORD      shift, and go to state 6
    FLOAT_KEYWORD       shift, and go to state 7
    INLINE_KEYWORD      shift, and go to state 8
    INT_KEYWORD         shift, and go to state 9
    LONG_KEYWORD        shift, and go to state 10
    REGISTER_KEYWORD    shift, and go to state 11
    RESTRICT_KEYWORD    shift, and go to state 12
    SHORT_KEYWORD       shift, and go to state 13
    SIGNED_KEYWORD      shift, and go to state 14
    STATIC_KEYWORD      shift, and go to state 15
    UNSIGNED_KEYWORD    shift, and go to state 16
    VOID_KEYWORD        shift, and go to state 17
    VOLATILE_KEYWORD    shift, and go to state 18
    _BOOL_KEYWORD       shift, and go to state 19
    _COMPLEX_KEYWORD    shift, and go to state 20
    _IMAGINARY_KEYWORD  shift, and go to state 21

    external_declaration     go to state 35
    function_definition      go to state 24
    declaration              go to state 25
    declaration_specifiers   go to state 26
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 23

   30 translation_unit: external_declaration .

    $default  reduce using rule 30 (translation_unit)


State 24

   32 external_declaration: function_definition .

    $default  reduce using rule 32 (external_declaration)


State 25

   33 external_declaration: declaration .

    $default  reduce using rule 33 (external_declaration)


State 26

   34 function_definition: declaration_specifiers . declarator declaration_list compound_statement
   35                    | declaration_specifiers . declarator F compound_statement
  120 declaration: declaration_specifiers . SEMICOLON_TERMINATOR
  121            | declaration_specifiers . init_declarator_list SEMICOLON_TERMINATOR

    IDENTIFIER            shift, and go to state 36
    LEFT_ROUND_BRACE      shift, and go to state 37
    MULTIPLICATION        shift, and go to state 38
    SEMICOLON_TERMINATOR  shift, and go to state 39

    init_declarator_list  go to state 40
    init_declarator       go to state 41
    declarator            go to state 42
    direct_declarator     go to state 43
    pointer               go to state 44


State 27

  122 declaration_specifiers: storage_class_specifier .
  123                       | storage_class_specifier . declaration_specifiers

    AUTO_KEYWORD        shift, and go to state 1
    CHAR_KEYWORD        shift, and go to state 2
    CONST_KEYWORD       shift, and go to state 3
    DOUBLE_KEYWORD      shift, and go to state 4
    ENUM_KEYWORD        shift, and go to state 5
    EXTERN_KEYWORD      shift, and go to state 6
    FLOAT_KEYWORD       shift, and go to state 7
    INLINE_KEYWORD      shift, and go to state 8
    INT_KEYWORD         shift, and go to state 9
    LONG_KEYWORD        shift, and go to state 10
    REGISTER_KEYWORD    shift, and go to state 11
    RESTRICT_KEYWORD    shift, and go to state 12
    SHORT_KEYWORD       shift, and go to state 13
    SIGNED_KEYWORD      shift, and go to state 14
    STATIC_KEYWORD      shift, and go to state 15
    UNSIGNED_KEYWORD    shift, and go to state 16
    VOID_KEYWORD        shift, and go to state 17
    VOLATILE_KEYWORD    shift, and go to state 18
    _BOOL_KEYWORD       shift, and go to state 19
    _COMPLEX_KEYWORD    shift, and go to state 20
    _IMAGINARY_KEYWORD  shift, and go to state 21

    $default  reduce using rule 122 (declaration_specifiers)

    declaration_specifiers   go to state 45
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 28

  124 declaration_specifiers: type_specifier .
  125                       | type_specifier . declaration_specifiers

    AUTO_KEYWORD        shift, and go to state 1
    CHAR_KEYWORD        shift, and go to state 2
    CONST_KEYWORD       shift, and go to state 3
    DOUBLE_KEYWORD      shift, and go to state 4
    ENUM_KEYWORD        shift, and go to state 5
    EXTERN_KEYWORD      shift, and go to state 6
    FLOAT_KEYWORD       shift, and go to state 7
    INLINE_KEYWORD      shift, and go to state 8
    INT_KEYWORD         shift, and go to state 9
    LONG_KEYWORD        shift, and go to state 10
    REGISTER_KEYWORD    shift, and go to state 11
    RESTRICT_KEYWORD    shift, and go to state 12
    SHORT_KEYWORD       shift, and go to state 13
    SIGNED_KEYWORD      shift, and go to state 14
    STATIC_KEYWORD      shift, and go to state 15
    UNSIGNED_KEYWORD    shift, and go to state 16
    VOID_KEYWORD        shift, and go to state 17
    VOLATILE_KEYWORD    shift, and go to state 18
    _BOOL_KEYWORD       shift, and go to state 19
    _COMPLEX_KEYWORD    shift, and go to state 20
    _IMAGINARY_KEYWORD  shift, and go to state 21

    $default  reduce using rule 124 (declaration_specifiers)

    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 29

  150 type_specifier: enum_specifier .

    $default  reduce using rule 150 (type_specifier)


State 30

  126 declaration_specifiers: type_qualifier .
  127                       | type_qualifier . declaration_specifiers

    AUTO_KEYWORD        shift, and go to state 1
    CHAR_KEYWORD        shift, and go to state 2
    CONST_KEYWORD       shift, and go to state 3
    DOUBLE_KEYWORD      shift, and go to state 4
    ENUM_KEYWORD        shift, and go to state 5
    EXTERN_KEYWORD      shift, and go to state 6
    FLOAT_KEYWORD       shift, and go to state 7
    INLINE_KEYWORD      shift, and go to state 8
    INT_KEYWORD         shift, and go to state 9
    LONG_KEYWORD        shift, and go to state 10
    REGISTER_KEYWORD    shift, and go to state 11
    RESTRICT_KEYWORD    shift, and go to state 12
    SHORT_KEYWORD       shift, and go to state 13
    SIGNED_KEYWORD      shift, and go to state 14
    STATIC_KEYWORD      shift, and go to state 15
    UNSIGNED_KEYWORD    shift, and go to state 16
    VOID_KEYWORD        shift, and go to state 17
    VOLATILE_KEYWORD    shift, and go to state 18
    _BOOL_KEYWORD       shift, and go to state 19
    _COMPLEX_KEYWORD    shift, and go to state 20
    _IMAGINARY_KEYWORD  shift, and go to state 21

    $default  reduce using rule 126 (declaration_specifiers)

    declaration_specifiers   go to state 47
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 31

  128 declaration_specifiers: function_specifier .
  129                       | function_specifier . declaration_specifiers

    AUTO_KEYWORD        shift, and go to state 1
    CHAR_KEYWORD        shift, and go to state 2
    CONST_KEYWORD       shift, and go to state 3
    DOUBLE_KEYWORD      shift, and go to state 4
    ENUM_KEYWORD        shift, and go to state 5
    EXTERN_KEYWORD      shift, and go to state 6
    FLOAT_KEYWORD       shift, and go to state 7
    INLINE_KEYWORD      shift, and go to state 8
    INT_KEYWORD         shift, and go to state 9
    LONG_KEYWORD        shift, and go to state 10
    REGISTER_KEYWORD    shift, and go to state 11
    RESTRICT_KEYWORD    shift, and go to state 12
    SHORT_KEYWORD       shift, and go to state 13
    SIGNED_KEYWORD      shift, and go to state 14
    STATIC_KEYWORD      shift, and go to state 15
    UNSIGNED_KEYWORD    shift, and go to state 16
    VOID_KEYWORD        shift, and go to state 17
    VOLATILE_KEYWORD    shift, and go to state 18
    _BOOL_KEYWORD       shift, and go to state 19
    _COMPLEX_KEYWORD    shift, and go to state 20
    _IMAGINARY_KEYWORD  shift, and go to state 21

    $default  reduce using rule 128 (declaration_specifiers)
